# egui-study

./: Cargo.toml  README.md  egui_app-223f9880d82af54c.js  egui_app-223f9880d82af54c_bg.wasm  index.html
.cargo/: config.toml
.github/workflows/: pages.yml
assets/: sw.js
src/: app.rs  lib.rs  main.rs
src/customized/: toggle_switch.rs
